Submenu alignment and hight fix

--- a/src/components/Thumbnail/Thumbnail.scss
+++ b/src/components/Thumbnail/Thumbnail.scss
@@ -6,6 +6,7 @@
   position: relative;
   padding: 12px 13.5px 9px;
 
+  &.active,
   &:hover {
     background-color: $blue-light;
   }
